# AASM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
include/: ast.h  codegen.h  common.h  directive_look_up.h  directive_utils.h  lc.h  lexer.h  parser.h  sa.h  token.h  type.h
include/ast/: ast_node.h  ast_node_type.h
include/rv32/: instr.h  instr_look_up.h  instr_utils.h  rv32_instr.h  rv32_reg.h  rv32_type.h  rv32ii.h
include/rv32/fmt/: fmt_type.h
include/rv32/fmt/b/: fmt_b.h  fmt_b_look_up.h  fmt_b_utils.h
include/rv32/fmt/i/: fmt_i.h  fmt_i_look_up.h  fmt_i_utils.h
include/rv32/fmt/j/: fmt_j.h  fmt_j_look_up.h  fmt_j_utils.h
include/rv32/fmt/r/: fmt_r.h  fmt_r_look_up.h  fmt_r_utils.h
include/rv32/fmt/s/: fmt_s.h  fmt_s_look_up.h  fmt_s_utils.h
include/rv32/fmt/u/: fmt_u.h  fmt_u_look_up.h  fmt_u_utils.h
include/rv32/reg/: freg.h  greg.h  reg.h  reg_look_up.h  reg_utils.h
include/symbol/: symbol.h  symbol_table.h
include/token/: token.h  token_array.h  token_data.h  token_data_table.h  token_type.h  tokenizer.h
include/utils/: a_alloc.h  a_common.h  aalloc.h  common.h  type.h
src/: ast.c  codegen.c  common.c  directive_look_up.c  lc.c  lexer.c  main.c  parser.c  sa.c  token.c
src/ast/: ast_node.c  ast_node_type.c
src/symbol/: symbol.c  symbol_table.c
src/token/: parser.c  token.c  token_array.c  token_data.c  token_data_table.c  token_type.c  tokenizer.c
src/utils/: common.c
test/: game_of_life.aasm  test0.aasm  test03.aasm  test04.aasm  test05.aasm  test06.aasm  test07.aasm  test08.aasm  test09.aasm  test10.aasm  test11.aasm  test12.aasm  test13.aasm  test14.aasm  test15.aasm  test16.aasm  test17.aasm  test18.aasm  test19.aasm  test2.aasm  test20.aasm  test21.aasm  test22.aasm  test23.aasm  test24.aasm  test25.aasm  test26.aasm  test27.aasm  test28.aasm  test29.aasm  test30.aasm  test31.aasm  test32.aasm  test33.aasm  test34.aasm  test35.aasm  test36.aasm  test37.aasm  test38.aasm  test39.aasm  (+4 more)
test/full/: Makefile  test_full.aasm
test/qemu/: Makefile  test_qemu.aasm
tests/: test0.aasm  test1.aasm
