# ------------------------------------------------------------------------------
#  Minimum required CMake version
# ------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.20)

# ------------------------------------------------------------------------------
#  Project definition
# ------------------------------------------------------------------------------
project(AASM VERSION 1.0 LANGUAGES C)

# ------------------------------------------------------------------------------
#  Export compile_commands.json (needed by clangd, LSPs, Neovim, etc.)
# ------------------------------------------------------------------------------
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ------------------------------------------------------------------------------
#  C standard settings
# ------------------------------------------------------------------------------
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

# ------------------------------------------------------------------------------
#  Output directory for runtime executables
# ------------------------------------------------------------------------------
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

# ------------------------------------------------------------------------------
#  Include directories for public headers
# ------------------------------------------------------------------------------
include_directories(${PROJECT_SOURCE_DIR}/include)

# ------------------------------------------------------------------------------
#  Search for top-level source files (e.g., src/main.c)
# ------------------------------------------------------------------------------
file(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.c)

# ------------------------------------------------------------------------------
#  Create the main executable
# ------------------------------------------------------------------------------
add_executable(${PROJECT_NAME} ${SRC_FILES})

# ------------------------------------------------------------------------------
#  Compiler options (C, not C++)
# ------------------------------------------------------------------------------
target_compile_options(${PROJECT_NAME} PRIVATE
    -Wall
    -Wextra
)
